[package]
name = "pixels"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["pixels"]
description = "pixels traits for image processing"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-pixels.git"
homepage = "https://github.com/nathanfaucett/rs-pixels"

[dependencies]
vector = {git = "https://github.com/nathanfaucett/rs-vector.git"}
insert = {git = "https://github.com/nathanfaucett/rs-insert.git"}
collection = {git = "https://github.com/nathanfaucett/rs-collection.git"}

[dev-dependencies]
stack = {git = "https://github.com/nathanfaucett/rs-stack.git"}
